# mynginx_evnet_module

./: .gitignore  README.md
dbconnpool/: CMakeLists.txt
dbconnpool/config/: mysql.json
dbconnpool/include/: connectionPool.h  mysqlconn.h
dbconnpool/src/: connectionPool.cpp  mysqlconn.cpp
my_nginx_event/: .gitignore  CMakeLists.txt  build.sh  mynginx-quit.sh
my_nginx_event/app/: nginx.cpp
my_nginx_event/client/: Makefile
my_nginx_event/config/: mysql.json  nginx.conf
my_nginx_event/html/: posttest.html  test.html
my_nginx_event/include/: my_crc32.h  my_http.h  my_logiccomm.h  my_memory.h  my_slogic.h  my_socket.h  my_threadpool.h  registHandler.h  router.h
my_nginx_event/include/conf/: my_conf.h
my_nginx_event/include/crc32/: my_crc32.h
my_nginx_event/include/dbconnpool/: connectionPool.h  mysqlconn.h
my_nginx_event/include/deleted/: my_comm.h  my_func.h  my_global.h  my_http.h  my_logiccomm.h  my_memeryPool.h
my_nginx_event/include/http/: HttpException.h  my_http_context.h  my_http_request.h  my_http_response.h
my_nginx_event/include/logger/: my_logger.h
my_nginx_event/include/logic/: my_slogic.h
my_nginx_event/include/memeryPool/: my_memeryPool.h  my_memory.h
my_nginx_event/include/middleware/: AuthMiddleware.h  middleware.h  middlewareChain.h
my_nginx_event/include/my_http/: Buffer.h  my_buffer.h  my_http_context.h  my_http_request.h  router.h
my_nginx_event/include/net/: my_socket.h
my_nginx_event/include/route/: router.h
my_nginx_event/include/server/: my_server.h
my_nginx_event/include/session/: RedisSessionStorage.h  redisClient.h  redisClientImpl.h  session.h  sessionManager.h  sessionStorage.h
my_nginx_event/include/threadPool/: my_lockfreequeue.h  my_threadpool.h
my_nginx_event/include/util/: my_comm.h  my_func.h  my_macro.h
my_nginx_event/logic/: my_slogic.cpp
my_nginx_event/misc/: my_memory.cpp  my_threadpool.cpp
my_nginx_event/my_http/: my_http.cpp  my_http_context.cpp  my_http_request.cpp  my_http_response.cpp  router.cpp
my_nginx_event/net/: my_http_request_callback.cpp  my_socket.cpp  my_socket_accept.cpp  my_socket_conn.cpp  my_socket_inet.cpp  my_socket_request.cpp  my_socket_time.cpp
my_nginx_event/proc/: my_process_cycle.cpp
my_nginx_event/registHandler/: registHandler.cpp
my_nginx_event/signal/: my_signal.cpp
my_nginx_event/src/app/: demo1.cpp  my_printf.cpp  nginx.cpp
my_nginx_event/src/config/: my_conf.cpp
my_nginx_event/src/crc32/: my_crc32.cpp
my_nginx_event/src/dbconnpool/: connectionPool.cpp  mysqlconn.cpp
my_nginx_event/src/delete/: my_printf.cpp  my_socket_inet.cpp
my_nginx_event/src/http/: POST uploadvideo HTTP1.1.txt  my_http_context.cpp  my_http_request.cpp  my_http_response.cpp
my_nginx_event/src/logger/: my_logger.cpp
my_nginx_event/src/logic/: my_slogic.cpp
my_nginx_event/src/middleware/: AuthMiddleware.cpp  README_AuthMiddleware.md  README_Middleware.md  middlewareChain.cpp
my_nginx_event/src/my_http/: my_http.cpp  my_http_request.cpp  my_http_response.cpp
my_nginx_event/src/net/: my_http_request_callback.cpp  my_socket.cpp  my_socket_accept.cpp  my_socket_conn.cpp  (+2 more)
my_nginx_event/test/: reload test.cpp
(+86 files in other folders)
